--- a/src/components/home/listUser/client/ProfileForm.css
+++ b/src/components/home/listUser/client/ProfileForm.css
@@ -1,3 +1,11 @@
+.wrap {
+  background: #f5f5f5;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  position: absolute;
+  overflow: auto;
+}
 .profile__container {
   margin-left: 500px;
   margin-top: 100px;
@@ -7,7 +15,7 @@
   background-color: white;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
   border-radius: 5px 5px 0 0;
-  height: 500px;
+  height: 400px;
 }
 .profile__title {
   border-bottom: 1px solid #f6f6f6;
@@ -18,6 +26,7 @@
 }
 .profile__form {
   border-right: 1px solid #f6f6f6;
+  margin-top: 20px;
 }
 .profile__tag {
   display: flex;
