--- a/src/components/home/menu/Menu.css
+++ b/src/components/home/menu/Menu.css
@@ -1,7 +1,7 @@
 .menu {
   width: 240px;
   z-index: 9;
-  background: white;
+  background: #f5f5f5;
   padding-top: 100px;
   height: 100vh;
   position: fixed;
