--- a/src/components/home/profile/AdminProfile.css
+++ b/src/components/home/profile/AdminProfile.css
@@ -1,83 +1,80 @@
-.wrap {
-  margin: auto;
-}
-.profile {
-  height: fit-content;
-  width: 485px;
-  border-radius: 10px;
-  background: white;
-  position: relative;
-}
-.profile__title {
-  height: 50px;
-  border-bottom: 1px solid rgbza(0, 0, 0, 0.2);
+.aprofile {
+  background: #f5f5f5;
+  width: 100%;
+  height: 100%;
   display: flex;
-  align-items: center;
-}
-
-.profile__title > h1 {
-  font-size: 1rem;
-  font-weight: 600;
-  margin-left: 10px;
-}
-.profile__form {
-  padding-top: 20px;
-}
-
-.profile__item {
-  display: flex;
-  padding-left: 10px;
-  justify-content: space-between;
-  align-items: center;
-}
-.profile__item > p {
-  max-width: 100px;
-  min-width: 110px;
-}
-.profile__item > input {
-  flex: 1;
-  height: 40px;
-  margin-right: 20px;
-  border-radius: 4px;
-  background-color: white;
-
-  border: 0.5px solid rgba(0, 0, 0, 0.5);
-}
-
-.profile__item > input:active {
-  border: 1px solid red;
-}
-.profile__item > button {
-  margin-right: 300px;
-  max-width: 100px;
-}
-.profile__form > img {
-  width: 70px;
-  height: 70px;
-  margin-left: 120px;
-}
-
-.profile__btn {
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
   position: absolute;
-  bottom: 0;
-  right: 0;
-  margin-bottom: 20px;
-  margin-right: 15px;
+  overflow: auto;
 }
 
-.profile__btn > button {
-  height: 30px;
-  background-color: rgb(0, 178, 191);
-  border: none;
+.aprofile__container {
+  background: white;
+  height: 500px;
+  width: 1000px;
+  margin-top: 100px;
+
+  margin-left: 270px;
   border-radius: 4px;
-  color: rgb(255, 255, 255);
-  font-weight: 400;
-  cursor: pointer;
-  transition: 0.2s ease;
 }
-.profile__btn > button:hover {
-  background: rgba(0, 178, 191, 0.8);
+
+.aprofile__header {
+  border-bottom: 1px solid #f5f5f5;
+  display: flex;
+  flex-direction: column;
+  margin-top: 15px;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.aprofile__header-1 {
+  font-size: 1.8em;
+  margin: 0;
+}
+
+.aprofile__header-2 {
+  font-size: 1em;
+  margin: 0;
+  margin-bottom: 15px;
+}
+
+.aprofile__box {
+  display: flex;
+
+  margin-top: 20px;
+}
+.aprofile__form {
+  margin-left: 40px;
+}
+
+.aprofile__line {
+  display: flex;
+  margin-bottom: 10px;
+  max-width: 500px;
+}
+.aprofile__label {
+  display: flex;
+  min-width: 150px;
+}
+.aprofile__data {
+  margin-right: 350px;
+
+  display: flex;
+  align-items: flex-start;
+}
+.aprofile__data > Input {
+  width: 300px;
+}
+.aprofile__btn > button {
+  width: 50px;
+  height: 25px;
+  background-color: rgb(0, 87, 145);
+  color: white;
+  align-items: center;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.aprofile__btn > button:hover {
+  background: rgb(0, 87, 145, 0.8);
 }
