--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -3,31 +3,53 @@
   height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
   position: relative;
   width: 100vw;
 }
-
-.login__logo {
-  /* height: 29px;
-    width: 101px; */
-  margin: auto;
-
-  object-fit: contain;
-  width: 100px;
+.login__backgroundImage {
+  width: 100%;
+  mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
 }
+.login__title {
+  display: flex;
+  position: absolute;
 
-.login__container {
+  padding-left: 50px;
+}
+.login__title > h1 {
+  color: rgb(0, 87, 145);
+}
+.login__note {
+  display: flex;
+  position: absolute;
   flex-direction: column;
-  width: 300px;
-  height: fit-content;
+  left: 50px;
+  top: 50px;
+}
+.login__note > p {
+  margin: 0px;
+  padding: 0px;
+}
+.login__link {
+  margin: 0px;
+  width: fit-content;
+}
+.login__container {
+  z-index: 1;
+  flex-direction: column;
+  width: 450px;
   display: flex;
   border-radius: 5px;
+
   border: 1px solid lightgray;
   padding: 20px;
-  position: relative;
-  margin: auto;
+  position: absolute;
+  top: 150px;
   background-color: white;
+  right: 200px;
+}
+.ant-form-item-label > label {
+  min-width: 123px;
 }
 
 .login__container > h1 {
@@ -53,20 +75,17 @@
 }
 
 .login__signInButton {
-  background: #f0c14b;
+  background-color: rgb(0, 87, 145);
+  color: white;
   border-radius: 2px;
-  width: 100%;
+  width: 300px;
   height: 30px;
   border: 1px solid;
   margin-top: 10px;
-  border-color: #a88734 #9c7e31 #846a29;
+  border: none;
+  cursor: pointer;
+  margin-left: 60px;
 }
-
-.login__registerButton {
-  border-radius: 2px;
-  width: 100%;
-  height: 25px;
-  border: 1px solid;
-  margin-top: 10px;
-  border-color: darkgray;
+.login__signInButton:hover {
+  background: rgba(0, 87, 145, 0.8);
 }
